--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
 </head>
 
 <body>
+  <nav>
+    <div class="navbar">
 
+      <div class="left">
+        <a href="#" class="active">Personal</a>
+        <a href="#">Business</a>
+      </div>
+
+      <div class="right">
+        <a href="#">Features</a>
+        <a href="#">Plans</a>
+        <a href="#">About us</a>
+        <a href="#">Help</a>
+        <button type="button" name="button">Sign in</button>
+        <button type="button" name="button">Get the App</button>
+      </div>
+
+  </div>
+
+  </nav>
 
 </body>
 
