jquery toggle function added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js" charset="utf-8"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="js/script.js" charset="utf-8"></script>
   <title>Revolut</title>
 </head>
 
@@ -19,15 +19,29 @@
       </div>
 
       <div class="right">
+
         <a href="#">Features</a>
+        <div class="dropdown-container">
+          <div class="dropdown-content">
+            <header>
+              <div class="icon-container">
+                <img src="img/Revolut-2.svg" alt="">
+              </div>
+              <span>Account</span>
+            </header>
+          </div>
+        </div>
+
         <a href="#">Plans</a>
+
         <a href="#">About us</a>
+
         <a href="#">Help</a>
         <button type="button" name="button">Sign in</button>
         <button type="button" name="button">Get the App</button>
       </div>
 
-  </div>
+    </div>
 
   </nav>
 
