features section completed

--- a/index.html
+++ b/index.html
@@ -23,12 +23,107 @@
         <a href="#">Features</a>
         <div class="dropdown-container">
           <div class="dropdown-content">
-            <header>
-              <div class="icon-container">
-                <img src="img/Revolut-2.svg" alt="">
-              </div>
-              <span>Account</span>
-            </header>
+
+            <!-- ACCOUNT SECTION -->
+            <div class="features">
+              <header>
+                <div class="icon-container">
+                  <img src="img/Revolut-2.svg" alt="">
+                </div>
+                <span>Account</span>
+              </header>
+              <section>
+                <div>
+                  <a href="#">Budget & Analytics</a>
+                </div>
+                <div>
+                  <a href="#">Cards</a>
+                </div>
+                <div>
+                  <a href="#">Junior account</a>
+                </div>
+                <div>
+                  <a href="#">Pockets</a>
+                </div>
+              </section>
+            </div>
+            <!-- END ACCOUNT SECTION -->
+
+            <!-- WEALTH SECTION -->
+            <div class="features">
+              <header>
+                <div class="icon-container">
+                  <img src="img/Revolut-2.svg" alt="">
+                </div>
+                <span>Account</span>
+              </header>
+              <section>
+                <div>
+                  <a href="#">Budget & Analytics</a>
+                </div>
+                <div>
+                  <a href="#">Cards</a>
+                </div>
+                <div>
+                  <a href="#">Junior account</a>
+                </div>
+                <div>
+                  <a href="#">Pockets</a>
+                </div>
+              </section>
+            </div>
+            <!-- END WEALTH SECTION -->
+
+            <!-- PAYMENTS SECTION -->
+            <div class="features">
+              <header>
+                <div class="icon-container">
+                  <img src="img/Revolut-2.svg" alt="">
+                </div>
+                <span>Account</span>
+              </header>
+              <section>
+                <div>
+                  <a href="#">Budget & Analytics</a>
+                </div>
+                <div>
+                  <a href="#">Cards</a>
+                </div>
+                <div>
+                  <a href="#">Junior account</a>
+                </div>
+                <div>
+                  <a href="#">Pockets</a>
+                </div>
+              </section>
+            </div>
+            <!-- END PAYMENTS SECTION -->
+
+            <!-- EXTRAS SECTION -->
+            <div class="features">
+              <header>
+                <div class="icon-container">
+                  <img src="img/Revolut-2.svg" alt="">
+                </div>
+                <span>Account</span>
+              </header>
+              <section>
+                <div>
+                  <a href="#">Budget & Analytics</a>
+                </div>
+                <div>
+                  <a href="#">Cards</a>
+                </div>
+                <div>
+                  <a href="#">Junior account</a>
+                </div>
+                <div>
+                  <a href="#">Pockets</a>
+                </div>
+              </section>
+            </div>
+            <!-- END EXTRAS SECTION -->
+
           </div>
         </div>
 
