--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
     <div class="navbar">
 
       <div class="left">
-        <a href="#" class="active">Personal</a>
+        <a href="#" class="active-opacity">Personal</a>
         <a href="#">Business</a>
       </div>
 
-      <div class="right">
-
-        <a href="#">Features</a>
+      <div class="container-right">
+        <!-- FEATURES MACRO SECTION -->
+        <div class="features">
+          <a href="#">Features</a>
+        </div>
         <div class="dropdown-container">
           <div class="dropdown-content">
 
             <!-- ACCOUNT SECTION -->
-            <div class="features">
+            <div class="features-content">
               <header>
                 <div class="icon-container">
                   <img src="img/Revolut-2.svg" alt="">
@@ -50,10 +52,10 @@
             <!-- END ACCOUNT SECTION -->
 
             <!-- WEALTH SECTION -->
-            <div class="features">
+            <div class="features-content">
               <header>
                 <div class="icon-container">
-                  <img src="img/Revolut-2.svg" alt="">
+                  <img src="img/Revolut-3.svg" alt="">
                 </div>
                 <span>Account</span>
               </header>
@@ -75,10 +77,10 @@
             <!-- END WEALTH SECTION -->
 
             <!-- PAYMENTS SECTION -->
-            <div class="features">
+            <div class="features-content">
               <header>
                 <div class="icon-container">
-                  <img src="img/Revolut-2.svg" alt="">
+                  <img src="img/Revolut-4.svg" alt="">
                 </div>
                 <span>Account</span>
               </header>
@@ -100,10 +102,10 @@
             <!-- END PAYMENTS SECTION -->
 
             <!-- EXTRAS SECTION -->
-            <div class="features">
+            <div class="features-content">
               <header>
                 <div class="icon-container">
-                  <img src="img/Revolut-2.svg" alt="">
+                  <img src="img/Revolut-5.svg" alt="">
                 </div>
                 <span>Account</span>
               </header>
@@ -126,15 +128,59 @@
 
           </div>
         </div>
+        <!-- FEATURES MACRO SECTION -->
 
-        <a href="#">Plans</a>
+        <!-- PLANS MACRO SECTION -->
+        <div class="plans">
 
-        <a href="#">About us</a>
+          <a href="#">Plans</a>
+          <div class="dropdown-container-small">
+            <div class="dropdown-content">
 
+              <section>
+                <a href="#">Standard</a>
+                <a href="#">Plus</a>
+                <a href="#">Premium</a>
+                <a href="#">Metal</a>
+                <a href="#">Compare plans</a>
+              </section>
+
+            </div>
+
+          </div>
+
+        </div>
+        <!-- PLANS MACRO SECTION -->
+
+        <!-- ABOUT US MACRO SECTION -->
+        <div class="about">
+          <a href="#">About us</a>
+
+          <div class="dropdown-container-small">
+            <div class="dropdown-content">
+
+              <section>
+                <a href="#">Standard</a>
+                <a href="#">Plus</a>
+                <a href="#">Premium</a>
+                <a href="#">Metal</a>
+                <a href="#">Compare plans</a>
+              </section>
+
+            </div>
+
+          </div>
+
+        </div>
+        <!-- END ABOUT US MACRO SECTION -->
+
+        <!-- HELP MACRO SECTION -->
         <a href="#">Help</a>
+        <!-- END HELP MACRO SECTION -->
         <button type="button" name="button">Sign in</button>
         <button type="button" name="button">Get the App</button>
       </div>
+
 
     </div>
 
