--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="about">
           <a href="#">About us</a>
 
-          <div class="dropdown-container-small">
+          <div class="dropdown-container-about">
             <div class="dropdown-content">
 
               <section>
@@ -175,7 +175,25 @@
         <!-- END ABOUT US MACRO SECTION -->
 
         <!-- HELP MACRO SECTION -->
-        <a href="#">Help</a>
+
+        <div class="help">
+          <a href="#">Help</a>
+          <div class="dropdown-container-help">
+            <div class="dropdown-content">
+
+              <section>
+                <a href="#">Standard</a>
+                <a href="#">Plus</a>
+                <a href="#">Premium</a>
+                <a href="#">Metal</a>
+                <a href="#">Compare plans</a>
+              </section>
+
+            </div>
+
+          </div>
+
+        </div>
         <!-- END HELP MACRO SECTION -->
         <button type="button" name="button">Sign in</button>
         <button type="button" name="button">Get the App</button>
